--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "law.go.kr 법령 현행 여부",
-    "description": "국가법령정보센터(law.go.kr)에서 보고 있는 법령이 현행인지 표시해 줌",
+    "description": "국가법령정보센터(law.go.kr)에서 보고 있는 법령이 현행인지 표시해 줍니다.",
     "version": "1.0",
     "manifest_version": 3,
     "icons": {
